--- a/9.15 OO_Arquivos_Pastas_Ler/.project
+++ b/9.15 OO_Arquivos_Pastas_Ler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>9.10 OrientacaoObjetoMetodosAbstratos</name>
+	<name>9.15 OO_Arquivos_Pastas_Ler</name>
 	<comment></comment>
 	<projects>
 	</projects>
