--- a/9.13 OO_TryCatch/.project
+++ b/9.13 OO_TryCatch/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>9.10 OrientacaoObjetoMetodosAbstratos</name>
+	<name>9.13 OO_TryCatch</name>
 	<comment></comment>
 	<projects>
 	</projects>
